# rolisteam

./: .appveyor.yml  .clang-format.conf  .clangd  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.8a34994  CONTRIBUTING.md  COPYRIGHT  Doxyfile  Messages.sh  README.md  README.txt  RPlugin.pro  Readme.md  Rolisteam.pro  Rolisteam.qrc  aboutrcse.cpp  aboutrcse.h  aboutrcse.ui  alignmentdelegate.cpp  alignmentdelegate.h  appveyor.yml  borderlisteditor.cpp  borderlisteditor.h  canvas.cpp  canvas.h  canvasfield.cpp  canvasfield.h  charactermodel.cpp  charactermodel.h  charactersheet.cpp  charactersheet.h  charactersheet.pri  (+82 more)
client/: CMakeLists.txt  Features.cpp  Features.h  Image.cpp  Image.h  applicationstate.scxml  client.pro  client.qrc  delegate.cpp  delegate.h  image.cpp  image.h  improvedworkspace.cpp  improvedworkspace.h  keygeneratordialog.cpp  keygeneratordialog.h  keygeneratordialog.ui  localpersonmodel.cpp  localpersonmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapframe.cpp  rolisteamapplication.cpp  rolisteamapplication.h  rolisteamqml.qrc  toolsbar.cpp  toolsbar.h
client/audio/: audioPlayer.cpp  audioPlayer.h  audiowidget.ui  musicmodel.cpp  musicmodel.h  playerwidget.cpp  playerwidget.h
client/chat/: chat.cpp  chat.h  chatbrowser.cpp  chatbrowser.h  chatlist.cpp  chatlist.h  chatlistwidget.cpp  chatlistwidget.h  chatwindow.cpp  chatwindow.cpp.orig  chatwindow.h  improvedtextedit.cpp  improvedtextedit.h  privatechatdialog.cpp  privatechatdialog.h
client/data/: chapter.cpp  chapter.h  character.cpp  character.h  characterstate.cpp  characterstate.h  charactervision.cpp  charactervision.h  cleveruri.cpp  cleveruri.h  cleverurimimedata.cpp  cleverurimimedata.h  diceshortcut.cpp  diceshortcut.h  mediacontainer.cpp  mediacontainer.h  person.cpp  person.h  player.cpp  player.h  resourcesnode.cpp  resourcesnode.h  shortcutmodel.cpp  shortcutmodel.h  shortcutvisitor.cpp  shortcutvisitor.h
client/map/: charactertoken.cpp  charactertoken.h  map.cpp  map.h  mapframe.cpp  mapframe.h  mapwizzard.cpp  newemptymapdialog.cpp  newemptymapdialog.h  newemptymapdialog.ui
client/network/: CMakeLists.txt  channel.cpp  channel.h  channellistpanel.cpp  channellistpanel.h  channellistpanel.ui  channelmodel.cpp  channelmodel.h  clientmanager.cpp  clientmanager.h  connectionaccepter.cpp  connectionaccepter.h  connectionprofile.cpp  connectionprofile.h  connectionretrydialog.cpp  connectionretrydialog.h  connectionretrydialog.ui  heartbeatsender.cpp  heartbeatsender.h  ipbanaccepter.cpp  ipbanaccepter.h  iprangeaccepter.cpp  iprangeaccepter.h  main.cpp  main.cpp.orig  messagedispatcher.cpp  messagedispatcher.h  networklink.cpp  networklink.h  networkmanager.cpp  networkmanager.cpp.orig  networkmanager.h  networkmessage.cpp  networkmessage.h  networkmessage.h.orig  networkmessagereader.cpp  networkmessagereader.h  networkmessagewriter.cpp  networkmessagewriter.h  networkreceiver.h  (+23 more)
client/pdfviewer/: pdfviewer.cpp  pdfviewer.h
client/preferences/: characterstatemodel.cpp  characterstatemodel.h  dicealiasmodel.cpp  dicealiasmodel.h  palettemodel.cpp  palettemodel.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialogbox.ui  preferenceslistener.cpp  preferenceslistener.h  preferencesmanager.cpp  preferencesmanager.h  rolisteamtheme.cpp  rolisteamtheme.h
client/qpdflib/: pdfjsbridge.cpp  pdfjsbridge.h  qpdflib.pri  qpdfwidget.cpp  qpdfwidget.h
client/services/: ipchecker.cpp  ipchecker.h  tipchecker.cpp  tipchecker.h  updatechecker.cpp  updatechecker.h  updaterwindow.cpp  updaterwindow.h
client/session/: sessionitemmodel.cpp  sessionitemmodel.h  sessionmanager.cpp  sessionmanager.h  sessionview.cpp  sessionview.h
client/sharededitor/: announcedocumentdialog.ui  cahootsresc.qrc  codeeditor.cpp  codeeditor.h  connecttodocument.cpp  connecttodocument.h  document.cpp  document.h  document.ui  enu.h  finddialog.cpp  finddialog.h  findtoolbar.cpp  findtoolbar.h  findtoolbar.ui  firstrundialog.cpp  firstrundialog.h  markdownhighlighter.cpp  markdownhighlighter.h  (+11 more)
core/: CMakeLists.txt
server/: CMakeLists.txt  connectionaccepter.cpp  connectionaccepter.h  dbusadaptor.cpp  dbusadaptor.h  ipbanaccepter.cpp  ipbanaccepter.h  iprangeacctepter.h  main.cpp  main.cpp~HEAD  main.cpp~branch  passwordaccepter.h  rolisteamdaemon.cpp  rolisteamdaemon.h  server.pri  server.pro  timeaccepter.cpp  timeaccepter.h
src/: AfficheurDisque.cpp  AfficheurDisque.h  AudioPlayer.ui  BarreOutils.cpp  BarreOutils.h  CMakeLists.txt  Carte.cpp  Carte.h  CarteFenetre.cpp  CarteFenetre.h  ClientServeur.cpp  ClientServeur.h  DessinPerso.cpp  DessinPerso.h  EditeurNotes.cpp  EditeurNotes.h  Features.cpp  Features.h  Image.cpp  Image.h  LecteurAudio.cpp  LecteurAudio.h  LecteurAudio.ui  LecteurAudiounix.cpp  LecteurAudiowin.cpp  Liaison.cpp  Liaison.h  ListeUtilisateurs.cpp  ListeUtilisateurs.h  MainWindow.cpp  MainWindow.h  MinutesEditor.cpp  MinutesEditor.h  NouveauPlanVide.cpp  NouveauPlanVide.h  Rolisteam_private.h  SelecteurCouleur.cpp  SelecteurCouleur.h  SelecteurDiametre.cpp  SelecteurDiametre.h  (+126 more)
tests/: .gitmodules  CMakeLists.txt  README.md  resources.qrc  runTest.sh  tests.pri  tests.pro
translations/: CMakeLists.txt  generatetranslations.py  qt_de.qm  rcse.ts  rcse_ca.ts  rcse_de.ts  rcse_es.ts  rcse_fr.ts  rcse_hu_HU.ts  rcse_it_IT.ts  rcse_nl_NL.ts  rcse_pt_BR.ts  rcse_ro_RO.ts  rcse_tr.ts  roliserver.ts  roliserver_de.ts  roliserver_es.ts  roliserver_fr.ts  roliserver_hu_HU.ts  roliserver_it.ts  roliserver_it_IT.ts  roliserver_nl_NL.ts  roliserver_pt_BR.ts  roliserver_ro_RO.ts  roliserver_tr.ts  rolisteam.ts  rolisteam_ca.ts  rolisteam_de.ts  rolisteam_de_DE.ts  rolisteam_es.ts  rolisteam_fi.ts  rolisteam_fr.ts  rolisteam_fr_FR.ts  rolisteam_hu_HU.ts  rolisteam_it.ts  rolisteam_it_IT.ts  rolisteam_nl_NL.ts  rolisteam_pt_BR.ts  rolisteam_ro_RO.ts  rolisteam_tr.ts  (+1 more)
widget/: CMakeLists.txt  campaigndock.cpp  campaigndock.h  campaigndock.ui  campaignproperties.cpp  campaignview.h
(+3263 files in other folders)
