cmake_minimum_required(VERSION 3.10)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

include_directories(src)
include_directories(src/diceparser)
include_directories(src/charactersheet)
include_directories(src/widgets/MRichTextEditor)

set(QT_REQUIRED_VERSION "5.12.0")
find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED COMPONENTS Core Widgets Gui Svg Network Multimedia PrintSupport Qml Quick QuickWidgets Xml WebEngineWidgets)

if(TESTS)
    find_package(Qt5 ${QT_REQUIRED_VERSION} CONFIG REQUIRED COMPONENTS Test)
endif()

set(HEADERS
    src/audio/audioPlayer.h
    src/audio/musicmodel.h
    src/audio/playerwidget.h
    src/charactersheet/charactersheet.h
    src/charactersheet/charactersheetitem.h
    src/charactersheet/charactersheetmodel.h
    src/charactersheet/charactersheetwindow.h
    src/charactersheet/csitem.h
    src/charactersheet/field.h
    src/charactersheet/formula/formulamanager.h
    src/charactersheet/formula/nodes/formulanode.h
    src/charactersheet/formula/nodes/operator.h
    src/charactersheet/formula/nodes/parenthesesfnode.h
    src/charactersheet/formula/nodes/scalaroperatorfnode.h
    src/charactersheet/formula/nodes/startnode.h
    src/charactersheet/formula/nodes/valuefnode.h
    src/charactersheet/formula/parsingtoolformula.h
    src/charactersheet/imagemodel.h
    src/charactersheet/propertyhelpers.h
    src/charactersheet/qqmlhelpers.h
    src/charactersheet/qqmlobjectlistmodel.h
    src/charactersheet/rolisteamimageprovider.h
    src/charactersheet/section.h
    src/charactersheet/sheetwidget.h
    src/charactersheet/tablefield.h
    src/chat/chat.h
    src/chat/chatbrowser.h
    src/chat/chatlist.h
    src/chat/chatlistwidget.h
    src/chat/chatwindow.h
    src/chat/improvedtextedit.h
    src/chat/privatechatdialog.h
    src/common/controller/logcontroller.h
    src/common/controller/logsenderscheduler.h
    src/common/task/uploadlogtoserver.h
    src/common/widgets/colorbutton.h
    src/common/widgets/logpanel.h
    src/data/features.h
    src/data/chapter.h
    src/data/character.h
    src/data/characterstate.h
    src/data/charactervision.h
    src/data/cleveruri.h
    src/data/cleverurimimedata.h
    src/data/diceshortcut.h
    src/data/localpersonmodel.h
    src/data/mediacontainer.h
    src/data/person.h
    src/data/player.h
    src/data/resourcesnode.h
    src/data/shortcutmodel.h
    src/data/shortcutvisitor.h
    src/diceparser/booleancondition.h
    src/diceparser/cli/displaytoolbox.h
    src/diceparser/compositevalidator.h
    src/diceparser/diceroller.h
    src/diceparser/die.h
    src/diceparser/include/dicealias.h
    src/diceparser/include/diceparser.h
    src/diceparser/include/diceparserhelper.h
    src/diceparser/include/highlightdice.h
    src/diceparser/include/parsingtoolbox.h
    src/diceparser/node/bind.h
    src/diceparser/node/countexecutenode.h
    src/diceparser/node/dicerollernode.h
    src/diceparser/node/executionnode.h
    src/diceparser/node/explodedicenode.h
    src/diceparser/node/filternode.h
    src/diceparser/node/forloopnode.h
    src/diceparser/node/groupnode.h
    src/diceparser/node/helpnode.h
    src/diceparser/node/ifnode.h
    src/diceparser/node/jumpbackwardnode.h
    src/diceparser/node/keepdiceexecnode.h
    src/diceparser/node/listaliasnode.h
    src/diceparser/node/listsetrollnode.h
    src/diceparser/node/mergenode.h
    src/diceparser/node/numbernode.h
    src/diceparser/node/occurencecountnode.h
    src/diceparser/node/paintnode.h
    src/diceparser/node/parenthesesnode.h
    src/diceparser/node/rerolldicenode.h
    src/diceparser/node/scalaroperatornode.h
    src/diceparser/node/sortresult.h
    src/diceparser/node/splitnode.h
    src/diceparser/node/startingnode.h
    src/diceparser/node/stringnode.h
    src/diceparser/node/uniquenode.h
    src/diceparser/node/valueslistnode.h
    src/diceparser/node/variablenode.h
    src/diceparser/operationcondition.h
    src/diceparser/qmltypesregister.h
    src/diceparser/range.h
    src/diceparser/result/diceresult.h
    src/diceparser/result/result.h
    src/diceparser/result/scalarresult.h
    src/diceparser/result/stringresult.h
    src/diceparser/validator.h
    src/map/charactertoken.h
    src/map/map.h
    src/map/mapframe.h
    src/map/mapwizzard.h
    src/map/newemptymapdialog.h
    src/media/image.h
    src/network/channel.h
    src/network/channellistpanel.h
    src/network/channelmodel.h
    src/network/clientmanager.h
    src/network/connectionaccepter.h
    src/network/connectionprofile.h
    src/network/connectionretrydialog.h
    src/network/heartbeatsender.h
    src/network/ipbanaccepter.h
    src/network/iprangeaccepter.h
    src/network/messagedispatcher.h
    src/network/networklink.h
    src/network/networkmessage.h
    src/network/networkmessagereader.h
    src/network/networkmessagewriter.h
    src/network/networkreceiver.h
    src/network/passwordaccepter.h
    src/network/receiveevent.h
    src/network/rserver.h
    src/network/selectconnectionprofiledialog.h
    src/network/servermanager.h
    src/network/tcpclient.h
    src/network/timeaccepter.h
    src/network/treeitem.h
    src/noteeditor/format_OO_oasis_/FoColorName.h
    src/noteeditor/format_OO_oasis_/GZipReader.h
    src/noteeditor/format_OO_oasis_/GZipWriter.h
    src/noteeditor/format_OO_oasis_/OOFormat.h
    src/noteeditor/format_OO_oasis_/OOReader.h
    src/noteeditor/format_OO_oasis_/XML_Editor.h
    src/noteeditor/src/notecontainer.h
    src/noteeditor/src/textedit.h
    src/pdfviewer/pdfviewer.h
    src/preferences/characterstatemodel.h
    src/preferences/dicealiasmodel.h
    src/preferences/palettemodel.h
    src/preferences/preferencesdialog.h
    src/preferences/preferenceslistener.h
    src/preferences/preferencesmanager.h
    src/preferences/rolisteamtheme.h
    src/qpdflib/pdfjsbridge.h
    src/qpdflib/qpdfwidget.h
    src/services/ipchecker.h
    src/services/tipchecker.h
    src/services/updatechecker.h
    src/services/updaterwindow.h
    src/session/sessionitemmodel.h
    src/session/sessionmanager.h
    src/session/sessionview.h
    src/sharededitor/codeeditor.h
   #src/sharededitor/connecttodocument.h
    src/sharededitor/document.h
    src/sharededitor/enu.h
    src/sharededitor/finddialog.h
    src/sharededitor/findtoolbar.h
#    src/sharededitor/firstrundialog.h
    src/sharededitor/markdownhighlighter.h
    src/sharededitor/participantspane.h
    src/sharededitor/sharednote.h
    src/sharededitor/sharednotecontainer.h
    src/sharededitor/utilities.h
    src/undoCmd/addmediacontainer.h
    src/undoCmd/addvmapitem.h
    src/undoCmd/changecoloritem.h
    src/undoCmd/changesizevmapitem.h
    src/undoCmd/deletemediacontainercommand.h
    src/undoCmd/deletevmapitem.h
    src/undoCmd/movevmapitem.h
    src/userlist/playersList.h
    src/userlist/playersListWidget.h
    src/userlist/rolisteammimedata.h
    src/userlist/userlistdelegate.h
    src/userlist/userlistview.h
    src/utils/insertionsortedmap.h
    src/vmap/items/anchoritem.h
    src/vmap/items/characteritem.h
    src/vmap/items/childpointitem.h
    src/vmap/items/ellipsitem.h
    src/vmap/items/griditem.h
    src/vmap/items/highlighteritem.h
    src/vmap/items/imageitem.h
    src/vmap/items/lineitem.h
    src/vmap/items/pathitem.h
    src/vmap/items/rectitem.h
    src/vmap/items/ruleitem.h
    src/vmap/items/sightitem.h
    src/vmap/items/textitem.h
    src/vmap/items/visualitem.h
    src/vmap/patternmodel.h
    src/vmap/rgraphicsview.h
    src/vmap/vcolorselector.h
    src/vmap/vcolortablechooser.h
    src/vmap/vmap.h
    src/vmap/vmapframe.h
    src/vmap/vmaptoolbar.h
    src/vmap/vmapwizzarddialog.h
    src/vmap/vtoolbar.h
    src/webview/webview.h
    src/widgets/MRichTextEditor/mrichtextedit.h
    src/widgets/MRichTextEditor/mtextedit.h
    src/widgets/aboutrolisteam.h
    src/widgets/centeredcheckbox.h
    src/widgets/circledisplayer.h
    src/widgets/colorselector.h
    src/widgets/delegate.h
    src/widgets/diameterselector.h
    src/widgets/filedirchooser.h
    src/widgets/filepathdelegateitem.h
    src/widgets/flowlayout.h
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkmodel.h
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkwidget.h
    src/widgets/gmtoolbox/NameGenerator/namegeneratorwidget.h
    src/widgets/gmtoolbox/NpcMaker/genericmodel.h
    src/widgets/gmtoolbox/NpcMaker/npcmakerwidget.h
    src/widgets/gmtoolbox/UnitConvertor/convertor.h
    src/widgets/gmtoolbox/UnitConvertor/convertoroperator.h
    src/widgets/gmtoolbox/UnitConvertor/customrulemodel.h
    src/widgets/gmtoolbox/UnitConvertor/unit.h
    src/widgets/gmtoolbox/UnitConvertor/unitmodel.h
    src/widgets/gmtoolbox/gamemastertool.h
    src/widgets/improvedworkspace.h
    src/widgets/keygeneratordialog.h
    src/widgets/onlinepicturedialog.h
    src/widgets/overlay.h
    src/widgets/persondialog.h
    src/widgets/realslider.h
    src/widgets/shortcuteditordialog.h
    src/widgets/tipofdayviewer.h
    src/widgets/toolsbar.h
    )


set(SOURCES
    src/audio/audioPlayer.cpp
    src/audio/musicmodel.cpp
    src/audio/playerwidget.cpp
    src/charactersheet/charactersheet.cpp
    #src/charactersheet/charactersheetbutton.cpp
    src/charactersheet/charactersheetitem.cpp
    src/charactersheet/charactersheetmodel.cpp
    src/charactersheet/charactersheetwindow.cpp
    src/charactersheet/csitem.cpp
    src/charactersheet/field.cpp
    src/charactersheet/formula/formulamanager.cpp
    src/charactersheet/formula/nodes/formulanode.cpp
    src/charactersheet/formula/nodes/operator.cpp
    src/charactersheet/formula/nodes/parenthesesfnode.cpp
    src/charactersheet/formula/nodes/scalaroperatorfnode.cpp
    src/charactersheet/formula/nodes/startnode.cpp
    src/charactersheet/formula/nodes/valuefnode.cpp
    src/charactersheet/formula/parsingtoolformula.cpp
    src/charactersheet/imagemodel.cpp
    src/charactersheet/qqmlhelpers.cpp
    src/charactersheet/qqmlobjectlistmodel.cpp
    src/charactersheet/rolisteamimageprovider.cpp
    src/charactersheet/section.cpp
    src/charactersheet/sheetwidget.cpp
    src/charactersheet/tablefield.cpp
    src/chat/chat.cpp
    src/chat/chatbrowser.cpp
    src/chat/chatlist.cpp
    src/chat/chatlistwidget.cpp
    src/chat/chatwindow.cpp
    src/chat/improvedtextedit.cpp
    src/chat/privatechatdialog.cpp
    src/common/controller/logcontroller.cpp
    src/common/controller/logsenderscheduler.cpp
    src/common/task/uploadlogtoserver.cpp
    src/common/widgets/colorbutton.cpp
    src/common/widgets/logpanel.cpp
    src/data/features.cpp
    src/data/chapter.cpp
    src/data/character.cpp
    src/data/characterstate.cpp
    src/data/charactervision.cpp
    src/data/cleveruri.cpp
    src/data/cleverurimimedata.cpp
    src/data/diceshortcut.cpp
    src/data/localpersonmodel.cpp
    src/data/mediacontainer.cpp
    src/data/person.cpp
    src/data/player.cpp
    src/data/resourcesnode.cpp
    src/data/shortcutmodel.cpp
    src/data/shortcutvisitor.cpp
    src/diceparser/booleancondition.cpp
    src/diceparser/compositevalidator.cpp
    src/diceparser/dicealias.cpp
    src/diceparser/diceparser.cpp
    src/diceparser/diceroller.cpp
    src/diceparser/die.cpp
    src/diceparser/highlightdice.cpp
    src/diceparser/node/bind.cpp
    src/diceparser/node/countexecutenode.cpp
    src/diceparser/node/dicerollernode.cpp
    src/diceparser/node/executionnode.cpp
    src/diceparser/node/explodedicenode.cpp
    src/diceparser/node/filternode.cpp
    src/diceparser/node/forloopnode.cpp
    src/diceparser/node/groupnode.cpp
    src/diceparser/node/helpnode.cpp
    src/diceparser/node/ifnode.cpp
    src/diceparser/node/jumpbackwardnode.cpp
    src/diceparser/node/keepdiceexecnode.cpp
    src/diceparser/node/listaliasnode.cpp
    src/diceparser/node/listsetrollnode.cpp
    src/diceparser/node/mergenode.cpp
    src/diceparser/node/numbernode.cpp
    src/diceparser/node/occurencecountnode.cpp
    src/diceparser/node/paintnode.cpp
    src/diceparser/node/parenthesesnode.cpp
    src/diceparser/node/rerolldicenode.cpp
    src/diceparser/node/scalaroperatornode.cpp
    src/diceparser/node/sortresult.cpp
    src/diceparser/node/splitnode.cpp
    src/diceparser/node/startingnode.cpp
    src/diceparser/node/stringnode.cpp
    src/diceparser/node/uniquenode.cpp
    src/diceparser/node/valueslistnode.cpp
    src/diceparser/node/variablenode.cpp
    src/diceparser/operationcondition.cpp
    src/diceparser/parsingtoolbox.cpp
    src/diceparser/qmltypesregister.cpp
    src/diceparser/range.cpp
    src/diceparser/result/diceresult.cpp
    src/diceparser/result/result.cpp
    src/diceparser/result/scalarresult.cpp
    src/diceparser/result/stringresult.cpp
    src/diceparser/validator.cpp
    src/map/charactertoken.cpp
    src/map/map.cpp
    src/map/mapframe.cpp
    src/map/mapwizzard.cpp
    src/map/newemptymapdialog.cpp
    src/media/image.cpp
    src/network/channel.cpp
    src/network/channellistpanel.cpp
    src/network/channelmodel.cpp
    src/network/clientmanager.cpp
    src/network/connectionaccepter.cpp
    src/network/connectionprofile.cpp
    src/network/connectionretrydialog.cpp
    src/network/heartbeatsender.cpp
    src/network/ipbanaccepter.cpp
    src/network/iprangeaccepter.cpp
    src/network/messagedispatcher.cpp
    src/network/networklink.cpp
    src/network/networkmessage.cpp
    src/network/networkmessagereader.cpp
    src/network/networkmessagewriter.cpp
    src/network/passwordaccepter.cpp
    src/network/receiveevent.cpp
    src/network/rserver.cpp
    src/network/selectconnectionprofiledialog.cpp
    src/network/servermanager.cpp
    src/network/tcpclient.cpp
    src/network/timeaccepter.cpp
    src/network/treeitem.cpp
    src/noteeditor/format_OO_oasis_/FoColorName.cpp
    src/noteeditor/format_OO_oasis_/GZip.cpp
    src/noteeditor/format_OO_oasis_/OOFormat.cpp
    src/noteeditor/format_OO_oasis_/OOReader.cpp
    src/noteeditor/format_OO_oasis_/XML_Editor.cpp
    src/noteeditor/src/notecontainer.cpp
    src/noteeditor/src/textedit.cpp
    src/pdfviewer/pdfviewer.cpp
    src/preferences/characterstatemodel.cpp
    src/preferences/dicealiasmodel.cpp
    src/preferences/palettemodel.cpp
    src/preferences/preferencesdialog.cpp
    src/preferences/preferenceslistener.cpp
    src/preferences/preferencesmanager.cpp
    src/preferences/rolisteamtheme.cpp
    src/qpdflib/pdfjsbridge.cpp
    src/qpdflib/qpdfwidget.cpp
    src/services/ipchecker.cpp
    src/services/tipchecker.cpp
    src/services/updatechecker.cpp
    src/services/updaterwindow.cpp
    src/session/sessionitemmodel.cpp
    src/session/sessionmanager.cpp
    src/session/sessionview.cpp
    src/sharededitor/codeeditor.cpp
 #   src/sharededitor/connecttodocument.cpp
    src/sharededitor/document.cpp
    src/sharededitor/finddialog.cpp
    src/sharededitor/findtoolbar.cpp
#    src/sharededitor/firstrundialog.cpp
    src/sharededitor/markdownhighlighter.cpp
    src/sharededitor/participantspane.cpp
    src/sharededitor/sharednote.cpp
    src/sharededitor/sharednotecontainer.cpp
    src/sharededitor/utilities.cpp
    src/undoCmd/addmediacontainer.cpp
    src/undoCmd/addvmapitem.cpp
    src/undoCmd/changecoloritem.cpp
    src/undoCmd/changesizevmapitem.cpp
    src/undoCmd/deletemediacontainercommand.cpp
    src/undoCmd/deletevmapitem.cpp
    src/undoCmd/movevmapitem.cpp
    src/userlist/playersList.cpp
    src/userlist/playersListWidget.cpp
    src/userlist/rolisteammimedata.cpp
    src/userlist/userlistdelegate.cpp
    src/userlist/userlistview.cpp
    src/vmap/items/anchoritem.cpp
    src/vmap/items/characteritem.cpp
    src/vmap/items/childpointitem.cpp
    src/vmap/items/ellipsitem.cpp
    src/vmap/items/griditem.cpp
    src/vmap/items/highlighteritem.cpp
    src/vmap/items/imageitem.cpp
    src/vmap/items/lineitem.cpp
    src/vmap/items/pathitem.cpp
    src/vmap/items/rectitem.cpp
    src/vmap/items/ruleitem.cpp
    src/vmap/items/sightitem.cpp
    src/vmap/items/textitem.cpp
    src/vmap/items/visualitem.cpp
    src/vmap/patternmodel.cpp
    src/vmap/rgraphicsview.cpp
    src/vmap/vcolorselector.cpp
    src/vmap/vcolortablechooser.cpp
    src/vmap/vmap.cpp
    src/vmap/vmapframe.cpp
    src/vmap/vmaptoolbar.cpp
    src/vmap/vmapwizzarddialog.cpp
    src/vmap/vtoolbar.cpp
    src/webview/webview.cpp
    src/widgets/MRichTextEditor/mrichtextedit.cpp
    src/widgets/MRichTextEditor/mtextedit.cpp
    src/widgets/aboutrolisteam.cpp
    src/widgets/centeredcheckbox.cpp
    src/widgets/circledisplayer.cpp
    src/widgets/colorselector.cpp
    src/widgets/delegate.cpp
    src/widgets/diameterselector.cpp
    src/widgets/filedirchooser.cpp
    src/widgets/filepathdelegateitem.cpp
    src/widgets/flowlayout.cpp
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkmodel.cpp
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkwidget.cpp
    src/widgets/gmtoolbox/NameGenerator/namegeneratorwidget.cpp
    src/widgets/gmtoolbox/NpcMaker/genericmodel.cpp
    src/widgets/gmtoolbox/NpcMaker/npcmakerwidget.cpp
    src/widgets/gmtoolbox/UnitConvertor/convertor.cpp
    src/widgets/gmtoolbox/UnitConvertor/convertoroperator.cpp
    src/widgets/gmtoolbox/UnitConvertor/customrulemodel.cpp
    src/widgets/gmtoolbox/UnitConvertor/unit.cpp
    src/widgets/gmtoolbox/UnitConvertor/unitmodel.cpp
    src/widgets/gmtoolbox/gamemastertool.cpp
    src/widgets/improvedworkspace.cpp
    src/widgets/keygeneratordialog.cpp
    src/widgets/onlinepicturedialog.cpp
    src/widgets/overlay.cpp
    src/widgets/persondialog.cpp
    src/widgets/realslider.cpp
    src/widgets/shortcuteditordialog.cpp
    src/widgets/tipofdayviewer.cpp
    src/widgets/toolsbar.cpp
    )


set(UI_FILES
    src/preferences/preferencesdialogbox.ui
    src/diceparser/irc/mainwindow.ui
    src/diceparser/gui/mainwindow.ui
    src/audio/audiowidget.ui
    src/map/newemptymapdialog.ui
    src/map/mapwizzard.ui
    src/sharededitor/findtoolbar.ui
    src/sharededitor/preferencesdialog.ui
    src/sharededitor/participantspane.ui
    src/sharededitor/sharednote.ui
    src/sharededitor/document.ui
    src/sharededitor/announcedocumentdialog.ui
    src/sharededitor/finddialog.ui
    src/sharededitor/firstrundialog.ui
    src/sharededitor/connecttodocument.ui
    src/common/widgets/logpanel.ui
    src/webview/webview.ui
    src/widgets/shortcuteditordialog.ui
    src/widgets/keygeneratordialog.ui
    src/widgets/gmtoolbox/UnitConvertor/convertor.ui
    src/widgets/gmtoolbox/DiceBookMark/dicebookmarkwidget.ui
    src/widgets/gmtoolbox/NpcMaker/npcmakerwidget.ui
    src/widgets/gmtoolbox/NameGenerator/namegeneratorwidget.ui
    src/widgets/tipofdayviewer.ui
    src/widgets/onlinepicturedialog.ui
    src/widgets/MRichTextEditor/mrichtextedit.ui
    src/widgets/aboutrolisteam.ui
    src/widgets/persondialog.ui
    src/vmap/vmapwizzarddialog.ui
    src/network/selectconnectionprofiledialog.ui
    src/network/channellistpanel.ui
    src/network/connectionretrydialog.ui
    )

add_library(core SHARED ${SOURCES} ${HEADERS} ${UI_FILES})
qt5_use_modules(core Widgets Gui Svg Network Multimedia PrintSupport Qml Quick QuickWidgets Xml WebEngineWidgets)
#target_link_libraries(core PUBLIC Qt5::Core Qt5::Gui Qt5::Svg Qt5::Widgets Qt5::Network Qt5::Multimedia Qt5::PrintSupport Qt5::Qml Qt5::Quick Qt5::QuickWidgets Qt5::Xml Qt5::WebEngineWidgets)

set(Network_HEADER
    src/network/rolisteamdaemon.h
    src/network/channelmodel.h
    src/network/tcpclient.h
    src/network/servermanager.h
    src/network/connectionaccepter.h
    src/network/passwordaccepter.h
    src/network/iprangeaccepter.h
    src/network/ipbanaccepter.h
    src/network/timeaccepter.h
    src/network/channel.h
    src/network/treeitem.h
    src/network/networkmessage.h
    src/network/networkmessagereader.h
    src/network/networkmessagewriter.h
    src/network/rserver.h
    src/network/messagedispatcher.h
    src/network/receiveevent.h
    src/data/person.h
    src/data/player.h
    src/data/character.h
    src/data/characterstate.h
    src/data/resourcesnode.h
    src/common/controller/logcontroller.h)


set(Network_SRC
    src/network/rolisteamdaemon.cpp
    src/network/channelmodel.cpp
    src/network/tcpclient.cpp
    src/network/servermanager.cpp
    src/network/connectionaccepter.cpp
    src/network/passwordaccepter.cpp
    src/network/iprangeaccepter.cpp
    src/network/ipbanaccepter.cpp
    src/network/timeaccepter.cpp
    src/network/channel.cpp
    src/network/treeitem.cpp
    src/network/networkmessage.cpp
    src/network/networkmessagereader.cpp
    src/network/networkmessagewriter.cpp
    src/network/rserver.cpp
    src/network/messagedispatcher.cpp
    src/network/receiveevent.cpp
    src/data/person.cpp
    src/data/player.cpp
    src/data/character.cpp
    src/data/characterstate.cpp
    src/data/resourcesnode.cpp
    src/common/controller/logcontroller.cpp
    )

add_library(network SHARED ${Network_SRC} ${Network_HEADER})
set_target_properties(network PROPERTIES COMPILE_DEFINITIONS "UNIT_TEST=1")
target_link_libraries(network PUBLIC Qt5::Core Qt5::Network Qt5::Gui)
